# projected_ranges

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
